...
"share app" = "Share app";
"show other apps" = "Show other apps";
"summary" = "Summary";
"version" = "Version";
"versionMessage" = "Application version";

"copper-ore" = "__ENTITY__copper-ore__";
"iron-ore" = "__ENTITY__iron-ore__";
"coal" = "__ENTITY__coal__";
"stone" = "__ENTITY__stone__";
"enemy-base" = "Enemy bases";
"crude-oil" = "Crude oil";
"uranium-ore" = "Uranium ore";
"trees" = "Trees";
...
"gun-turret" = "Gun turret";
"cutscene-gun-turret" = "Gun turret";
"laser-turret" = "Laser turret";
"flamethrower-turret" = "Flamethrower turret";
"artillery-turret" = "Artillery turret";
"burner-inserter" = "Burner inserter";
"inserter" = "Inserter";
"long-handed-inserter" = "Long handed inserter";
"fast-inserter" = "Fast inserter";
"filter-inserter" = "Filter inserter";
"stack-inserter" = "Stack inserter";
"stack-filter-inserter" = "Stack filter inserter";
"iron-chest" = "Iron chest";
...
"logistic-chest-passive-provider" = "Passive provider chest";
"logistic-chest-storage" = "Storage chest";
"logistic-chest-buffer" = "Buffer chest";
"logistic-chest-requester" = "Requester chest";
"beacon" = "Beacon";
"car" = "Car";
"spidertron" = "Spidertron";
"tank" = "Tank";
"straight-rail" = "Straight rail";
"curved-rail" = "Curved rail";
"rail-ending-remnants" = "Rail ending remnants";
"offshore-pump" = "Offshore pump";
"water-well-pump" = "Water well pump";
...
"pipe" = "Pipe";
"pipe-to-ground" = "Pipe to ground";
"locomotive" = "Locomotive";
"boiler" = "Boiler";
"heat-exchanger" = "Heat exchanger";
"heat-pipe" = "Heat pipe";
"copper-cable" = "Copper cable";
"small-electric-pole" = "Small electric pole";
"steam-engine" = "Steam engine";
"steam-turbine" = "Steam turbine";
"assembling-machine-1" = "Assembling machine 1";
"assembling-machine-2" = "Assembling machine 2";
"assembling-machine-3" = "Assembling machine 3";
...
"discharge-defense-equipment" = "Discharge defense";
"exoskeleton-equipment" = "Exoskeleton";
"night-vision-equipment" = "Nightvision";
"belt-immunity-equipment" = "Belt immunity equipment";
"personal-roboport-equipment" = "Personal roboport";
"personal-roboport-mk2-equipment" = "Personal roboport MK2";
"water" = "Water";
"steam" = "Steam";
"crude-oil" = "Crude oil";
"light-oil" = "Light oil";
"heavy-oil" = "Heavy oil";
"petroleum-gas" = "Petroleum gas";
"sulfuric-acid" = "Sulfuric acid";
"lubricant" = "Lubricant";
"signal-everything" = "Everything";
"signal-anything" = "Anything";
...
"stone" = "Stone";
"wood" = "Wood";
"copper-ore" = "Copper ore";
"iron-ore" = "Iron ore";
"uranium-ore" = "Uranium ore";
"coal" = "Coal";
"copper-plate" = "Copper plate";
"iron-plate" = "Iron plate";
"steel-plate" = "Steel plate";
"stone-brick" = "Stone brick";
"iron-gear-wheel" = "Iron gear wheel";
"iron-stick" = "Iron stick";
"copper-cable" = "Copper cable";
"cliff-explosives" = "Cliff explosives";
...
"rocket-launcher" = "Rocket launcher";
"spidertron-rocket-launcher" = "Spidertron rocket launcher";
"flamethrower" = "Flamethrower";
"flamethrower-ammo" = "Flamethrower ammo";
"flamethrower-turret" = "Flamethrower turret";
"artillery-turret" = "Artillery turret";
"electronic-circuit" = "Electronic circuit";
"advanced-circuit" = "Advanced circuit";
"processing-unit" = "Processing unit";
"light-armor" = "Light armor";
"heavy-armor" = "Heavy armor";
"modular-armor" = "Modular armor";
"power-armor" = "Power armor";
...
"coin" = "Coin";
"cannon-shell" = "Cannon shell";
"explosive-cannon-shell" = "Explosive cannon shell";
"tank-cannon" = "Tank cannon";
"low-density-structure" = "Low density structure";
"rocket-fuel" = "Rocket fuel";
"nuclear-fuel" = "Nuclear fuel";
"rocket-control-unit" = "Rocket control unit";
"rocket-part" = "Rocket part";
"satellite" = "Satellite";
"stone-path" = "Stone path";
"concrete" = "Concrete";
"refined-concrete" = "Refined concrete";
...
"landfill" = "Landfill";
"electric-energy-interface" = "Electric energy interface";
"heat-interface" = "Heat interface";
"burner-generator" = "Burner generator";
"simple-entity-with-force" = "Simple entity with force";
"simple-entity-with-owner" = "Simple entity with owner";
"uranium-235" = "Uranium-235";
"uranium-238" = "Uranium-238";
"uranium-fuel-cell" = "Uranium fuel cell";
"used-up-uranium-fuel-cell" = "Used-up uranium fuel cell";
"filled-barrel" = "__1__ barrel";
"uranium-rounds-magazine" = "Uranium rounds magazine";
"uranium-cannon-shell" = "Uranium cannon shell";
"explosive-uranium-cannon-shell" = "Explosive uranium cannon shell";
"atomic-bomb" = "Atomic bomb";
"item-with-tags" = "Item with tags";
"item-with-label" = "Item with label";
"item-with-inventory" = "Item with inventory";
"selection-tool" = "Selection tool";
"infinity-chest" = "Infinity chest";
"infinity-pipe" = "Infinity pipe";
...
"basic-oil-processing" = "Basic oil processing";
"advanced-oil-processing" = "Advanced oil processing";
"empty-crude-oil-barrel" = "Empty crude oil barrel";
"fill-crude-oil-barrel" = "Fill crude oil barrel";
"light-oil-cracking" = "Light oil cracking to petroleum gas";
"heavy-oil-cracking" = "Heavy oil cracking to light oil";
"uranium-processing" = "Uranium processing";
"kovarex-enrichment-process" = "Kovarex enrichment process";
"nuclear-fuel-reprocessing" = "Nuclear fuel reprocessing";
"empty-filled-barrel" = "Empty __1__ barrel";
"fill-barrel" = "Fill __1__ barrel";
"coal-liquefaction" = "Coal liquefaction";
"logistic-science-pack" = "Logistic science pack";
"military-science-pack" = "Military science pack";
"chemical-science-pack" = "Chemical science pack";
...
