...
            disclosureIcon.isHidden = true
            disclosureIcon.accessibilityIdentifier = nil
            return
        } else {
            if model.value.collapsedDescendants {
                disclosureIcon.transform = CGAffineTransform(rotationAngle: 0)
                disclosureIcon.accessibilityIdentifier = "disclosure_icon_collapsed"
            } else {
                disclosureIcon.transform = CGAffineTransform(rotationAngle: CGFloat.pi / 2)
                disclosureIcon.accessibilityIdentifier = "disclosure_icon_expanded"
            }
        }
    }
}

