...

    private let timeSelectionView: TimeSelectionView = {
        let view = TimeSelectionView()
        return view
    }()

    private let productionTableView: UITableView = {
        let tableView = UITableView()
        tableView.estimatedRowHeight = 0
        tableView.rowHeight = UITableView.automaticDimension
        tableView.allowsSelection = true
        tableView.isMultipleTouchEnabled = true
        tableView.accessibilityIdentifier = "productionTableView"
...
