...
        label.numberOfLines = 1
        label.text = NSLocalizedString("required-items", comment: "")
        label.textColor = Colors.commonTextColor
        return label
    }()

    private let secondsTextField: UITextField = {
        let textField = UITextField()
        textField.text = "1"
        textField.textAlignment = .center
        textField.keyboardType = .decimalPad
        textField.textColor = Colors.commonTextColor
        textField.layer.borderColor = Colors.commonTextColor.cgColor
...
        secondsTextField.layer.borderWidth = 1
        secondsTextField.layer.cornerRadius = 6

        secondsTextField.inputAccessoryView = {
            let toolbar = UIToolbar()
            toolbar.frame = CGRect(x: 0, y: 0, width: frame.size.width, height: 44)
            let closeButton = UIBarButtonItem(title: "Готово",
                                              style: .done,
                                              target: self,
                                              action: #selector(TimeSelectionView.didTapClose))
            let space = UIBarButtonItem(barButtonSystemItem: .flexibleSpace,
                                        target: nil,
                                        action: nil)
...
